<resources>
    <string name="app_name">Virtual Display</string>
    <string name="carbon7_email">carbon7team@gmail.com</string>
    <string name="measurements">Measurements</string>
    <string name="status">Status</string>
    <string name="alarms">Alarms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_status">All status</string>
    <string name="active_status">Active status</string>
    <string name="inactive_status">Inactive status</string>
    <string name="all_alarms">All alarms</string>
    <string name="warning_alarms">Warning alarms</string>
    <string name="critical_alarms">Critical alarms</string>
    <string name="A000">IMMINENT STOP</string>
    <string name="A001">OVERLOAD ALARM</string>
    <string name="A002">AMBIENT TEMPERATURE ALARM</string>
    <string name="A003">TRANSFER LOCKED</string>
    <string name="A004">TRANSFER IMPOSSIBLE</string>
    <string name="A005">INSUFFICIENT RESOURCES</string>
    <string name="A006">REDUNDANCY LOST</string>
    <string name="A007">OUTPUT SHORT CIRCUIT DETECTION</string>
    <string name="A008">ECO MODE DISABLED BY UPS</string>
    <string name="A009">ENERGY SAVER DISABLED BY UPS</string>
    <string name="A010">ON BYPASS FOR 1 HOUR</string>
    <string name="A011">WRONG PROFILE PASSWORD ENTERED</string>
    <string name="A012">MAINTENANCE ALARM</string>
    <string name="A013">REMOTE SERVICE ALARM</string>
    <string name="A014">REMOTE SERVICE PREVENTIVE ALARM</string>
    <string name="A015">GENERAL ALARM</string>
    <string name="A016">BATTERY DISCONNECTED</string>
    <string name="A017">BATTERY DISCHARGED</string>
    <string name="A018">END OF BACK-UP TIME</string>
    <string name="A019">OPERATING ON BATTERY</string>
    <string name="A020">BATTERY TEMPERATURE ALARM</string>
    <string name="A021">BATTERY ROOM ALARM</string>
    <string name="A022">BATTERY TEST FAILED</string>
    <string name="A023">BMS HAS DETECTED A WEAK STRING</string>
    <string name="A024">AT LEAST ONE BATTERY STRING OPEN</string>
    <string name="A025">ON BATTERY WITH MAINS OK</string>
    <string name="A026">INSULATION FAULT</string>
    <string name="A027">BATTERY ALARM</string>
    <string name="A028">BATTERY PREVENTIVE ALARM</string>
    <string name="A029">UPS BACKUP CRITICAL ALARM</string>
    <string name="A030">UPS BACKUP PREVENTIVE ALARM</string>
    <string name="A031">UPS BACKUP NOT OK</string>
    <string name="A032">RECTIFIER CRITICAL ALARM</string>
    <string name="A033">RECTIFIER PREVENTIVE ALARM</string>
    <string name="A034">RECTIFIER REDUNDANCY ALARM</string>
    <string name="A035">RECTIFIER INPUT SUPPLY NOT OK</string>
    <string name="A036">GEN SET ALARM</string>
    <string name="A037">CHARGER CRITICAL ALARM</string>
    <string name="A038">CHARGER PREVENTIVE ALARM</string>
    <string name="A039">BATTERY CHARGE INTERRUPTED</string>
    <string name="A040">INVERTER CRITICAL ALARM</string>
    <string name="A041">INVERTER PREVENTIVE ALARM</string>
    <string name="A042">INVERTER REDUNDANCY ALARM</string>
    <string name="A043">IMMINENT REDUNDANCY LOST</string>
    <string name="A044">CONSUMABLE ALARM</string>
    <string name="A045">UNIT REDUNDANCY LOST</string>
    <string name="A046">PARALLEL BOARD CRITICAL ALARM</string>
    <string name="A047">PARALLEL BOARD PREVENTIVE ALARM</string>
    <string name="A048">BYPASS CRITICAL ALARM</string>
    <string name="A049">BYPASS PREVENTIVE ALARM</string>
    <string name="A050">BYPASS INPUT SUPPLY NOT OK</string>
    <string name="A051">PHASE ROTATION FAULT</string>
    <string name="A052">BYPASS BACK-FEED DETECTION</string>
    <string name="A053">TRANSFORMER ALARM</string>
    <string name="A054">FAN FAILURE</string>
    <string name="A055">ACS ALARM</string>
    <string name="A056">MAINTENANCE BYPASS ALARM</string>
    <string name="A057">INTERNAL BACK-FEED DETECTION</string>
    <string name="A058">BATTERY MONITORING ALARM</string>
    <string name="A059">UPS POWER OFF </string>
    <string name="A060">WRONG CONFIGURATION </string>
    <string name="A061">INTERNAL/COMMUNICATION FAILURE</string>
    <string name="A062">OPTION BOARD ALARM </string>
    <string name="A063">SPARE PARTS NOT COMPATIBLE</string>
    <string name="A064">PROGRAMMABLE A064</string>
    <string name="A065">PROGRAMMABLE A065</string>
    <string name="A066">PROGRAMMABLE A066</string>
    <string name="A067">PROGRAMMABLE A067</string>
    <string name="A068">PROGRAMMABLE A068</string>
    <string name="A069">PROGRAMMABLE A069</string>
    <string name="A070">PROGRAMMABLE A070</string>
    <string name="A071">PROGRAMMABLE A071</string>
    <string name="A072">LINE-INTERACTIVE MODE DISABLED BY UPS</string>
    <string name="A073">FREE</string>
    <string name="A074">FREE</string>
    <string name="A075">FREE</string>
    <string name="A076">FREE</string>
    <string name="A077">FREE</string>
    <string name="A078">FREE</string>
    <string name="A079">FREE</string>
    <string name="A080">CUSTOMER INSTALLATION OVERLOAD</string>
    <string name="A081">FREE</string>
    <string name="A082">FREE</string>
    <string name="A083">FREE</string>
    <string name="A084">FREE</string>
    <string name="A085">FREE</string>
    <string name="A086">FREE</string>
    <string name="A087">FREE</string>
    <string name="A088">FREE</string>
    <string name="A089">FREE</string>
    <string name="A090">FREE</string>
    <string name="A091">FREE</string>
    <string name="A092">OVERLOAD PRE ALARM</string>
    <string name="A093">BATTERY VOLTAGE OUT OF RANGE</string>
    <string name="A094">BATTERY CHARGER FAILURE</string>
    <string name="A095">BATTERY DEEP DISCHARGE PROTECTION INITIATED</string>
    <string name="A096">[1] IN GENERAL ALARM</string>
    <string name="A097">[2] IN GENERAL ALARM</string>
    <string name="A098">[3] IN GENERAL ALARM</string>
    <string name="A099">[4] IN GENERAL ALARM</string>
    <string name="A100">[5] IN GENERAL ALARM</string>
    <string name="A101">[6] IN GENERAL ALARM</string>
    <string name="A102">[7] IN GENERAL ALARM</string>
    <string name="A103">[8] IN GENERAL ALARM</string>
    <string name="A104">[9] IN GENERAL ALARM</string>
    <string name="A105">[10] IN GENERAL ALARM</string>
    <string name="A106">[11] IN GENERAL ALARM</string>
    <string name="A107">[12] IN GENERAL ALARM</string>
    <string name="A108">[13] IN GENERAL ALARM</string>
    <string name="A109">[14] IN GENERAL ALARM</string>
    <string name="A110">[15] IN GENERAL ALARM</string>
    <string name="A111">FREE</string>
    <string name="A112">[1] IN IMMINENT STOP</string>
    <string name="A113">[2] IN IMMINENT STOP</string>
    <string name="A114">[3] IN IMMINENT STOP</string>
    <string name="A115">[4] IN IMMINENT STOP</string>
    <string name="A116">[5] IN IMMINENT STOP</string>
    <string name="A117">[6] IN IMMINENT STOP</string>
    <string name="A118">[7] IN IMMINENT STOP</string>
    <string name="A119">[8] IN IMMINENT STOP</string>
    <string name="A120">[9] IN IMMINENT STOP</string>
    <string name="A121">[10] IN IMMINENT STOP</string>
    <string name="A122">[11] IN IMMINENT STOP</string>
    <string name="A123">[12] IN IMMINENT STOP</string>
    <string name="A124">[13] IN IMMINENT STOP</string>
    <string name="A125">[14] IN IMMINENT STOP</string>
    <string name="A126">[15] IN IMMINENT STOP</string>
    <string name="A127">FREE</string>
    <string name="no_alarms">NO ALARMS</string>
    <string name="S000">LOAD PROTECTED BY INVERTER</string>
    <string name="S001">LOAD SUPPLIED IN NORMAL MODE</string>
    <string name="S002">LOAD SUPPLIED BY AUTOMATIC BYPASS</string>
    <string name="S003">LOAD SUPPLIED BY MAINTENANCE BYPASS</string>
    <string name="S004">LOAD OFF</string>
    <string name="S005">FREE</string>
    <string name="S006">UPS IN ECO MODE</string>
    <string name="S007">UPS IN ENERGY SAVER</string>
    <string name="S008">HEAT RUN MODE</string>
    <string name="S009">IN SERVICE MODE</string>
    <string name="S010">LINE-INTERACTIVE MODE</string>
    <string name="S011">OPERATING</string>
    <string name="S012">AVAILABLE</string>
    <string name="S013">ON STANDBY</string>
    <string name="S014">UNIT ISOLATED</string>
    <string name="S015">MAINTENANCE ALERT</string>
    <string name="S016">OUTPUT BREAKER CLOSED </string>
    <string name="S017">MAINTENANCE BYPASS CLOSED </string>
    <string name="S018">EXTERNAL MAINTENANCE BYPASS CLOSED </string>
    <string name="S019">EXTERNAL OUTPUT BREAKER CLOSED</string>
    <string name="S020">SINGLE PHASE INPUT SUPPLY</string>
    <string name="S021">RECTIFIER INPUT BREAKER CLOSED</string>
    <string name="S022">BYPASS INPUT BREAKER CLOSED</string>
    <string name="S023">GEN SET ON</string>
    <string name="S024">BUS BAR 1 CLOSED </string>
    <string name="S025">BUS BAR 2 CLOSED </string>
    <string name="S026">AUTOMATIC START IN PROGRESS</string>
    <string name="S027">MAINTENANCE BYPASS PROCEDURE IN PROGRESS</string>
    <string name="S028">UPS OFF PROCEDURE IN PROGRESS</string>
    <string name="S029">BYPASS EXTRACTION PROCEDURE</string>
    <string name="S030">AUTO-TEST PROCEDURE IN PROGRESS</string>
    <string name="S031">ALARM ACKNOWLEDGEMENT REQUESTED</string>
    <string name="S032">BATTERY OK</string>
    <string name="S033">BATTERY CHARGED</string>
    <string name="S034">BATTERY TEST IN PROGRESS</string>
    <string name="S035">BATTERY TEST PROGRAMMED</string>
    <string name="S036">BATTERY CHARGING</string>
    <string name="S037">BATTERY TEST INTERRUPTED</string>
    <string name="S038">FLOATING VOLTAGE REDUCED</string>
    <string name="S039">BATTERY DISCHARGE TO INPUT</string>
    <string name="S040">UPS BACKUP SYSTEM CONNECTED</string>
    <string name="S041">UPS BACKUP SYSTEM CHARGED/READY</string>
    <string name="S042">UPS BACKUP SYSTEM CHARGING</string>
    <string name="S043">FREE</string>
    <string name="S044">ALL INVERTERS ARE ON</string>
    <string name="S045">ALL RECTIFIERS ARE ON</string>
    <string name="S046">ALL BYPASSES ARE AVAILABLE</string>
    <string name="S047">ALL UNITS OR MODULES ARE AVAILABLE</string>
    <string name="S048">RECTIFIER INPUT SUPPLY PRESENT</string>
    <string name="S049">RECTIFIER ON</string>
    <string name="S050">CHARGER ON</string>
    <string name="S051">RECTIFIER IS STARTING</string>
    <string name="S052">INVERTER ON</string>
    <string name="S053">INVERTER SWITCH ON</string>
    <string name="S054">FREE</string>
    <string name="S055">BYPASS OUTPUT BREAKER CLOSED</string>
    <string name="S056">BYPASS INPUT SUPPLY PRESENT</string>
    <string name="S057">BYPASS STATIC SWITCH CLOSED</string>
    <string name="S058">BYPASS INPUT &amp; INVERTER SYNCHRONISED</string>
    <string name="S059">ACS EXTERNAL SYNCHRONISATION</string>
    <string name="modify_ups">Modify UPS</string>
    <string name="delete_ups">Delete UPS</string>
    <string name="insert_ups_name">Insert UPS name</string>
    <string name="ups_name">My favourite UPS</string>
    <string name="insert_ip_address">Insert IP address</string>
    <string name="ups_ip">xx.xx.xx.xx</string>
    <string name="insert_port">Insert port</string>
    <string name="_8888">8888</string>
    <string name="modify_this_ups">Modify this UPS</string>
    <string name="delete_this_ups">Delete this UPS</string>
    <string name="select_this_ups">Select this UPS</string>
    <string name="voltage"><i>V (V)</i></string>
    <string name="volt"><i>△ (V)</i></string>
    <string name="frequency">Fr</string>
    <string name="l1">L1</string>
    <string name="l2">L2</string>
    <string name="l3">L3</string>
    <string name="measurements_starter_null_herz_value">null Hz</string>
    <string name="measurements_starter_null_value">null</string>
    <string name="measurements_starter_null_t_amb_value">T. Amb\nnull °C</string>
</resources>