<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/insert_ups_name" />

    <EditText
        android:id="@+id/ups_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:hint="@string/ups_name"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:text="@string/insert_ip_address" />

    <EditText
        android:id="@+id/ups_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:digits="0123456789."
        android:hint="@string/ups_ip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:text="@string/insert_port" />

    <EditText
        android:id="@+id/ups_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="15sp"
        android:hint="@string/_8888"
        android:gravity="center_horizontal"
        android:inputType="number" />

</LinearLayout>