<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/diagram_menu_item"
        android:checkable="true"
        android:checked="false"
        android:title="Diagram" />
    <item
        android:checkable="true"
        android:title="@string/status" />
    <item
        android:id="@+id/alarms_menu_item"
        android:checkable="true"
        android:title="@string/alarms" />
    <item android:title="@string/measurements">
        <menu>
            <item
                android:checkable="true"
                android:title="Load" />
            <item
                android:checkable="true"
                android:title="Battery" />
            <item
                android:checkable="true"
                android:title="Rectifier" />
            <item
                android:checkable="true"
                android:title="Inverter" />
            <item
                android:checkable="true"
                android:title="Bypass" />
        </menu>
    </item>
</menu>