<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/ups_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="11dp"
            app:cardCornerRadius="11dp"
            app:cardUseCompatPadding="true"
            android:clickable="true"
            android:focusable="true"
            android:tooltipText="@string/select_this_ups">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ups_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="15dp"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    tools:text="UPS di topo gigio" />

                <TextView
                    android:id="@+id/ups_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginHorizontal="15dp"
                    android:textSize="15sp"
                    android:gravity="center_horizontal"
                    tools:text="IP: 192.168.137.1 - port: 8888" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn_ups_modify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/modify_ups"
                        app:backgroundTint="#1d992b"
                        app:icon="@drawable/ic_modify"
                        android:text="@string/modify_ups"
                        android:tooltipText="@string/modify_this_ups"/>

                    <Button
                        android:id="@+id/btn_ups_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:layout_marginStart="15dp"
                        app:backgroundTint="#8a1212"
                        android:contentDescription="@string/delete_ups"
                        app:icon="@drawable/ic_delete"
                        android:text="@string/delete_ups"
                        android:tooltipText="@string/delete_this_ups"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>